update: first launch

--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "memory_game",
+  "homepage": "https://mariorodriguezdeleon.github.io/Memory-Game/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "express": "^4.16.4",
+    "gh-pages": "^2.0.1",
     "mongoose": "^5.5.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -13,7 +15,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
